[package]
name = "samurai_warriors_derusted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_pkv = "0.9.0"
asset_loading_plugin = { path = "../asset_loading_plugin" }
leafwing-input-manager = "0.11.2"
bevy_common_assets = { version = "0.8.0", features = ["json"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git"}
serde = "1.0.193"
rand_core = "0.6"
bevy_rand = "0.4"
bevy_prng = { version = "0.2", features = ["rand_chacha"] }
